# Linux_templates

./: .gitignore  README.md
common/current_time/: CMakeLists.txt  current_time.cpp
common/wait_status/: CMakeLists.txt  wait_status.cpp  wait_status.h
include/: current_time.h
io_template/epoll/: CMakeLists.txt  epoll.cpp
process_comm_template/pipe/: CMakeLists.txt  pipe.cpp
process_comm_template/pipe_filter/: CMakeLists.txt  pipe_filter.cpp
process_comm_template/pipe_sync/: CMakeLists.txt  pipe_sync.cpp
process_comm_template/popen/: CMakeLists.txt  popen.cpp
process_template/child_status/: CMakeLists.txt  child_status.cpp
process_template/posix_shm/: CMakeLists.txt
process_template/posix_shm/posix_shm_create/: CMakeLists.txt  posix_shm_create.cpp
process_template/posix_shm/posix_shm_read/: CMakeLists.txt  posix_shm_read.cpp
process_template/posix_shm/posix_shm_unlink/: CMakeLists.txt  posix_shm_unlink.cpp
process_template/posix_shm/posix_shm_write/: CMakeLists.txt  posix_shm_write.cpp
process_template/process/: CMakeLists.txt  process.cpp
process_template/sigchld/: CMakeLists.txt  sigchld.cpp
process_template/wait/: CMakeLists.txt  wait.cpp
socket_template/: CMakeLists.txt
socket_template/internet_socket/: CMakeLists.txt
socket_template/internet_socket/internet_socket_client/: CMakeLists.txt  internet_socket_client.cpp  internet_socket_client.h
socket_template/internet_socket/internet_socket_server/: CMakeLists.txt  internet_socket_server.cpp  internet_socket_server.h
socket_template/readline/: readline.cpp  readline.h
system_template/rlimit/: CMakeLists.txt  rlimit.cpp
thread_template/condition/: CMakeLists.txt  condition.cpp
thread_template/mutex/: CMakeLists.txt  mutex.cpp
thread_template/pthread_cancel/: CMakeLists.txt  pthread_cancel.cpp
thread_template/simple_thread/: CMakeLists.txt  simple_thread.cpp
timer_template/timerfd/: CMakeLists.txt  timerfd.cpp
